minus front correction with gap for subject pop up on quizz list

--- a/src/css/Quizz/SubjectPopup.css
+++ b/src/css/Quizz/SubjectPopup.css
@@ -4,6 +4,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
   
   .subject-item {
